// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the PaddedView component should render 1`] = `
.c0 {
  padding-top: 1rem;
  padding-right: 1rem;
  padding-bottom: 1rem;
  padding-left: 1rem;
}

<div
  className="c0 ui-kit.PaddedView"
/>
`;

exports[`the PaddedView component should render without horizontal padding 1`] = `
.c0 {
  padding-top: 1rem;
  padding-right: 0;
  padding-bottom: 1rem;
  padding-left: 0;
}

<div
  className="c0 ui-kit.PaddedView"
/>
`;

exports[`the PaddedView component should render without vertical padding 1`] = `
.c0 {
  padding-top: 0;
  padding-right: 1rem;
  padding-bottom: 0;
  padding-left: 1rem;
}

<div
  className="c0 ui-kit.PaddedView"
/>
`;
